[package]
name = "linked_hash_set"
version = "0.1.4"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "HashSet with insertion ordering"
repository = "https://github.com/alexheretic/linked-hash-set"
keywords = ["data-structures"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
linked-hash-map = {git="https://github.com/lengyijun/linked-hash-map"}
serde = { version = "1", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
serde_test = "1"

